# HistoryMatching

./: HistoryMatch1DToyModel.ipynb  HistoryMatch2DToyModel.ipynb  HistoryMatch3DToyModel.ipynb  LinearToyModel.ipynb  LiquidDropAnalytical.ipynb  LiquidDropModel.ipynb  LiquidDropModel2.ipynb  LiquidDropModel3D.ipynb  LiquidDropModel4D.ipynb  NP_historymatch.ipynb  NP_historymatch_highE.ipynb  Plot.ipynb  Plots_3D.ipynb  README.txt  ToyModel_Analytical.ipynb  historymatch_ChiralEFT.ipynb  historymatch_LiquidDropModel.ipynb  setup.cfg  workspace.code-workspace
.ipynb_checkpoints/: HistoryMatch1DToyModel-checkpoint.ipynb  HistoryMatch2DToyModel-checkpoint.ipynb  HistoryMatch3DToyModel-checkpoint.ipynb  LinearToyModel-checkpoint.ipynb
Plotting Notebooks/: Ellipsoidsample_plots.ipynb  LiquidDropAnalytical.ipynb  LiquidDropModel2.ipynb  LiquidDropModel3.ipynb  LiquidDropModel_old.ipynb  Plot.ipynb  Untitled.ipynb
Prepackage/: 2D_2z_notebook-Copy1.ipynb  2D_2z_notebook-Copy2.ipynb  2D_2z_notebook.ipynb  2Dnotebook.ipynb  2Dtoy.py  3Dnotebook.ipynb  ToyModel_Analytical.ipynb  __init__.py  data.py  emulator.py  historymatch.py  kernels.py  lighthouse.py  mininest.py  multiDtoy.py  old_functions.py  plot.py  test_run.py  utils.py
TestPackage/: packagetest.ipynb
data/: 3D_HM_details.txt  3D_HM_w0_nonimp.txt  3D_analytic_cov.txt  3D_analytic_mean.txt  3D_historymatch_hypercube_samples.txt  4D_HM_details.txt  4D_HM_w0_nonimp.txt  4D_HM_w1_nonimp.txt  4D_analytic_cov.txt  4D_analytic_mean.txt  5D_analytic_cov.txt  5D_analytic_mean.txt  LD_analytic_cov.txt  LD_analytic_mean.txt  (+2 more)
(+109 files in other folders)
